# 107dashboard

./: .env.example  .gitignore  AGENTS.md  README.md  environment.yml
backend/: README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/core/: config.py  identity.py
backend/app/models/: __init__.py  job_metadata.py
backend/app/repositories/: __init__.py  job_control.py  job_metadata.py  product.py  submission.py
backend/app/schemas/: jobs.py  product.py  repositories.py  system.py
backend/app/services/: ai_tools.py  demo_fallback.py  job_catalog.py  native_control.py  native_logs.py  native_submission.py  product.py  repositories.py  test_projects.py
backend/app/slurm/: __init__.py  adapter.py  control.py  models.py  parsers.py  runner.py  submission.py
backend/tests/: conftest.py
backend/tests/integration/: test_ai_provider_test_api.py  test_ai_read_tools.py  test_demo_fallback.py  test_job_metadata_repository.py  test_jobs_api.py  test_mvp_fixture_flow.py  test_native_control.py  test_native_live_interaction.py  test_native_logs.py  test_native_submission.py  test_product_api.py  test_repositories_api.py
backend/tests/unit/: test_ai_provider_test.py  test_demo_release.py  test_health.py  test_identity.py  test_job_catalog.py  test_jobs.py  test_native_control_acceptance.py  test_native_log_acceptance.py  test_native_product_check.py  test_native_submit_preflight.py  test_native_submit_smoke.py  test_repositories.py  test_slurm_adapter.py  test_slurm_parsers.py  test_slurm_submission.py  test_test_projects.py
(+77 files in other folders)
